Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-178

Link failure if wchar_t cannot be determined as UTF-16 or UTF-32

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Appender
    • None

    Description

      Builds on Solaris and Mac OS/X typically fail unless the wchar_t methods are suppressed since the implementations of UnicodeHelper::decodeWide and UnicodeHelper::encodeWide are missing since the nature of wchar_t cannot be determined. This patch moves those methods out of UnicodeHelper and into charsetdecoder.cpp and charsetencoder.cpp in a manner that allows log4cxx to be built even if the nature of wchar_t cannot be determined. With the changes, applications using log4cxx will link and simple applications have been tested on Solaris.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: