LOGCXX-178: Link failure if wchar_t cannot be determined